--- a/src/dreamsdk-runner.lpi
+++ b/src/dreamsdk-runner.lpi
@@ -19,8 +19,9 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="2"/>
-      <BuildNr Value="174"/>
-      <StringTable Comments="http://dreamsdk.org/" CompanyName="The DreamSDK Team" FileDescription="DreamSDK Shell Runner" InternalName="dreamsdk-runner" LegalCopyright="© Copyleft 2019" LegalTrademarks="Sega and Dreamcast are registered trademark of Sega Games Co., Ltd." OriginalFilename="dreamsdk-runner.exe" ProductName="DreamSDK" ProductVersion="2.0"/>
+      <MinorVersionNr Value="1"/>
+      <BuildNr Value="175"/>
+      <StringTable Comments="http://dreamsdk.org/" CompanyName="The DreamSDK Team" FileDescription="DreamSDK Shell Runner" InternalName="dreamsdk-runner" LegalCopyright="© Copyleft 2018-2020" LegalTrademarks="Sega and Dreamcast are registered trademark of Sega Games Co., Ltd." OriginalFilename="dreamsdk-runner.exe" ProductName="DreamSDK" ProductVersion="3.0.4.2001"/>
     </VersionInfo>
     <BuildModes Count="2">
       <Item1 Name="Debug" Default="True"/>
@@ -88,32 +89,32 @@
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
-        <Filename Value="..\..\common\src\sys\systools.pas"/>
+        <Filename Value="D:\common\src\sys\systools.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="SysTools"/>
       </Unit1>
       <Unit2>
-        <Filename Value="..\..\common\src\sys\version.pas"/>
+        <Filename Value="D:\common\src\sys\version.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Version"/>
       </Unit2>
       <Unit3>
-        <Filename Value="..\..\common\src\verintf.pas"/>
+        <Filename Value="D:\common\src\verintf.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="VerIntf"/>
       </Unit3>
       <Unit4>
-        <Filename Value="..\..\common\src\firstrun.pas"/>
+        <Filename Value="D:\common\src\firstrun.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="FirstRun"/>
       </Unit4>
       <Unit5>
-        <Filename Value="..\..\common\src\sys\runcmd.pas"/>
+        <Filename Value="D:\common\src\sys\runcmd.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="RunCmd"/>
       </Unit5>
       <Unit6>
-        <Filename Value="..\..\common\src\runner.pas"/>
+        <Filename Value="D:\common\src\runner.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Runner"/>
       </Unit6>
