--- a/src/dreamsdk-runner.lpi
+++ b/src/dreamsdk-runner.lpi
@@ -20,7 +20,7 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="3"/>
       <RevisionNr Value="1"/>
-      <BuildNr Value="226"/>
+      <BuildNr Value="229"/>
       <StringTable Comments="https://dreamsdk.org/" CompanyName="The DreamSDK Team" FileDescription="DreamSDK Shell Runner" InternalName="dreamsdk-runner" LegalCopyright="© Copyleft 2018-2025" LegalTrademarks="Sega and Dreamcast are registered trademark of Sega Games Co., Ltd." OriginalFilename="dreamsdk-runner.exe" ProductName="DreamSDK" ProductVersion="4.0.9.2506"/>
     </VersionInfo>
     <BuildModes Count="2">
@@ -63,13 +63,13 @@
     </PublishOptions>
     <RunParams>
       <local>
-        <CommandLineParams Value="/opt/toolchains/dc/kos/utils/genromfs/genromfs -f romdisk_test.img -d romdisk -v -x .svn -x .git -x .gitkeep -x .keepme"/>
+        <CommandLineParams Value="--version"/>
       </local>
       <FormatVersion Value="2"/>
       <Modes Count="1">
         <Mode0 Name="default">
           <local>
-            <CommandLineParams Value="/opt/toolchains/dc/kos/utils/genromfs/genromfs -f romdisk_test.img -d romdisk -v -x .svn -x .git -x .gitkeep -x .keepme"/>
+            <CommandLineParams Value="--version"/>
           </local>
         </Mode0>
       </Modes>
@@ -125,7 +125,7 @@
       </Debugging>
     </Linking>
     <Other>
-      <CustomOptions Value="-dDEBUG -dDEBUG_DISABLE_CONSOLE_PRINT"/>
+      <CustomOptions Value="-dDEBUG -dDEBUG_DISABLE_CONSOLE_PRINT -dSYSTOOLS_DETAILED_DEBUG_LOG_MESSAGE_FORCED"/>
     </Other>
   </CompilerOptions>
 </CONFIG>
