--- a/src/dreamsdk-runner.lpi
+++ b/src/dreamsdk-runner.lpi
@@ -21,7 +21,7 @@
       <MajorVersionNr Value="3"/>
       <RevisionNr Value="1"/>
       <BuildNr Value="232"/>
-      <StringTable Comments="https://dreamsdk.org/" CompanyName="The DreamSDK Team" FileDescription="DreamSDK Shell Runner" InternalName="dreamsdk-runner" LegalCopyright="© Copyleft 2018-2025" LegalTrademarks="Sega and Dreamcast are registered trademark of Sega Games Co., Ltd." OriginalFilename="dreamsdk-runner.exe" ProductName="DreamSDK" ProductVersion="4.0.9.2507"/>
+      <StringTable Comments="https://dreamsdk.org/" CompanyName="The DreamSDK Team" FileDescription="DreamSDK Shell Runner" InternalName="dreamsdk-runner" LegalCopyright="© Copyleft 2018-2025" LegalTrademarks="Sega and Dreamcast are registered trademark of Sega Games Co., Ltd." OriginalFilename="dreamsdk-runner.exe" ProductName="DreamSDK" ProductVersion="4.0.10.2508"/>
     </VersionInfo>
     <BuildModes Count="2">
       <Item1 Name="Debug" Default="True"/>
@@ -63,13 +63,13 @@
     </PublishOptions>
     <RunParams>
       <local>
-        <CommandLineParams Value="kos-cc --version"/>
+        <CommandLineParams Value="kos-cc --version -fdiagnostics-color=always"/>
       </local>
       <FormatVersion Value="2"/>
       <Modes Count="1">
         <Mode0 Name="default">
           <local>
-            <CommandLineParams Value="kos-cc --version"/>
+            <CommandLineParams Value="kos-cc --version -fdiagnostics-color=always"/>
           </local>
         </Mode0>
       </Modes>
