--- a/src/dreamsdk-runner.lpi
+++ b/src/dreamsdk-runner.lpi
@@ -1,131 +1,131 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version='1.0' encoding='utf-8'?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="12"/>
-    <PathDelim Value="\"/>
+    <Version Value="12" />
+    <PathDelim Value="\" />
     <General>
       <Flags>
-        <MainUnitHasCreateFormStatements Value="False"/>
-        <MainUnitHasTitleStatement Value="False"/>
-        <MainUnitHasScaledStatement Value="False"/>
-        <CompatibilityMode Value="True"/>
+        <MainUnitHasCreateFormStatements Value="False" />
+        <MainUnitHasTitleStatement Value="False" />
+        <MainUnitHasScaledStatement Value="False" />
+        <CompatibilityMode Value="True" />
       </Flags>
-      <SessionStorage Value="InProjectDir"/>
-      <Title Value="DreamSDK Shell Runner"/>
-      <UseAppBundle Value="False"/>
-      <ResourceType Value="res"/>
+      <SessionStorage Value="InProjectDir" />
+      <Title Value="DreamSDK Shell Runner" />
+      <UseAppBundle Value="False" />
+      <ResourceType Value="res" />
     </General>
     <VersionInfo>
-      <UseVersionInfo Value="True"/>
-      <AutoIncrementBuild Value="True"/>
-      <MajorVersionNr Value="3"/>
-      <RevisionNr Value="1"/>
-      <BuildNr Value="232"/>
-      <StringTable Comments="https://dreamsdk.org/" CompanyName="The DreamSDK Team" FileDescription="DreamSDK Shell Runner" InternalName="dreamsdk-runner" LegalCopyright="© Copyleft 2018-2025" LegalTrademarks="Sega and Dreamcast are registered trademark of Sega Games Co., Ltd." OriginalFilename="dreamsdk-runner.exe" ProductName="DreamSDK" ProductVersion="4.0.10.2508"/>
+      <UseVersionInfo Value="True" />
+      <AutoIncrementBuild Value="True" />
+      <MajorVersionNr Value="3" />
+      <RevisionNr Value="1" />
+      <BuildNr Value="232" />
+      <StringTable Comments="https://dreamsdk.org/" CompanyName="The DreamSDK Team" FileDescription="DreamSDK Shell Runner" InternalName="dreamsdk-runner" LegalCopyright="© Copyleft 2018-2025" LegalTrademarks="Sega and Dreamcast are registered trademark of Sega Games Co., Ltd." OriginalFilename="dreamsdk-runner.exe" ProductName="DreamSDK" ProductVersion="4.0.11.2508" />
     </VersionInfo>
     <BuildModes Count="2">
-      <Item1 Name="Debug" Default="True"/>
+      <Item1 Name="Debug" Default="True" />
       <Item2 Name="Release">
         <CompilerOptions>
-          <Version Value="11"/>
-          <PathDelim Value="\"/>
+          <Version Value="11" />
+          <PathDelim Value="\" />
           <Target>
-            <Filename Value="..\bin\dreamsdk-runner"/>
+            <Filename Value="..\bin\dreamsdk-runner" />
           </Target>
           <SearchPaths>
-            <IncludeFiles Value="$(ProjOutDir)"/>
-            <OtherUnitFiles Value="..\..\common\src;..\..\common\src\sys"/>
-            <UnitOutputDirectory Value="..\lib\$(TargetCPU)-$(TargetOS)"/>
+            <IncludeFiles Value="$(ProjOutDir)" />
+            <OtherUnitFiles Value="..\..\common\src;..\..\common\src\sys" />
+            <UnitOutputDirectory Value="..\lib\$(TargetCPU)-$(TargetOS)" />
           </SearchPaths>
           <CodeGeneration>
-            <SmartLinkUnit Value="True"/>
-            <TargetCPU Value="x86_64"/>
-            <TargetOS Value="win64"/>
+            <SmartLinkUnit Value="True" />
+            <TargetCPU Value="x86_64" />
+            <TargetOS Value="win64" />
             <Optimizations>
-              <OptimizationLevel Value="3"/>
+              <OptimizationLevel Value="3" />
             </Optimizations>
           </CodeGeneration>
           <Linking>
             <Debugging>
-              <GenerateDebugInfo Value="False"/>
-              <DebugInfoType Value="dsDwarf3"/>
+              <GenerateDebugInfo Value="False" />
+              <DebugInfoType Value="dsDwarf3" />
             </Debugging>
-            <LinkSmart Value="True"/>
+            <LinkSmart Value="True" />
           </Linking>
           <Other>
-            <CustomOptions Value="-dRELEASE"/>
+            <CustomOptions Value="-dRELEASE" />
           </Other>
         </CompilerOptions>
       </Item2>
     </BuildModes>
     <PublishOptions>
-      <Version Value="2"/>
+      <Version Value="2" />
     </PublishOptions>
     <RunParams>
       <local>
-        <CommandLineParams Value="kos-cc --version -fdiagnostics-color=always"/>
+        <CommandLineParams Value="kos-cc --version -fdiagnostics-color=always" />
       </local>
-      <FormatVersion Value="2"/>
+      <FormatVersion Value="2" />
       <Modes Count="1">
         <Mode0 Name="default">
           <local>
-            <CommandLineParams Value="kos-cc --version -fdiagnostics-color=always"/>
+            <CommandLineParams Value="kos-cc --version -fdiagnostics-color=always" />
           </local>
         </Mode0>
       </Modes>
     </RunParams>
     <RequiredPackages Count="2">
       <Item1>
-        <PackageName Value="LCL"/>
+        <PackageName Value="LCL" />
       </Item1>
       <Item2>
-        <PackageName Value="LCLBase"/>
+        <PackageName Value="LCLBase" />
       </Item2>
     </RequiredPackages>
     <Units Count="1">
       <Unit0>
-        <Filename Value="dreamsdk-runner.lpr"/>
-        <IsPartOfProject Value="True"/>
+        <Filename Value="dreamsdk-runner.lpr" />
+        <IsPartOfProject Value="True" />
       </Unit0>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="11"/>
-    <PathDelim Value="\"/>
+    <Version Value="11" />
+    <PathDelim Value="\" />
     <Target>
-      <Filename Value="..\bin\dreamsdk-runner"/>
+      <Filename Value="..\bin\dreamsdk-runner" />
     </Target>
     <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\common\src;..\..\common\src\sys"/>
-      <UnitOutputDirectory Value="..\lib\$(TargetCPU)-$(TargetOS)"/>
+      <IncludeFiles Value="$(ProjOutDir)" />
+      <OtherUnitFiles Value="..\..\common\src;..\..\common\src\sys" />
+      <UnitOutputDirectory Value="..\lib\$(TargetCPU)-$(TargetOS)" />
     </SearchPaths>
     <Parsing>
       <SyntaxOptions>
-        <IncludeAssertionCode Value="True"/>
+        <IncludeAssertionCode Value="True" />
       </SyntaxOptions>
     </Parsing>
     <CodeGeneration>
       <Checks>
-        <IOChecks Value="True"/>
-        <RangeChecks Value="True"/>
-        <OverflowChecks Value="True"/>
-        <StackChecks Value="True"/>
+        <IOChecks Value="True" />
+        <RangeChecks Value="True" />
+        <OverflowChecks Value="True" />
+        <StackChecks Value="True" />
       </Checks>
-      <VerifyObjMethodCallValidity Value="True"/>
-      <TargetCPU Value="i386"/>
-      <TargetOS Value="win32"/>
+      <VerifyObjMethodCallValidity Value="True" />
+      <TargetCPU Value="i386" />
+      <TargetOS Value="win32" />
     </CodeGeneration>
     <Linking>
       <Debugging>
-        <DebugInfoType Value="dsDwarf2Set"/>
-        <UseHeaptrc Value="True"/>
-        <TrashVariables Value="True"/>
-        <UseExternalDbgSyms Value="True"/>
+        <DebugInfoType Value="dsDwarf2Set" />
+        <UseHeaptrc Value="True" />
+        <TrashVariables Value="True" />
+        <UseExternalDbgSyms Value="True" />
       </Debugging>
     </Linking>
     <Other>
-      <CustomOptions Value="-dDEBUG -dDEBUG_DISABLE_CONSOLE_PRINT -dSYSTOOLS_DETAILED_DEBUG_LOG_MESSAGE_FORCED"/>
+      <CustomOptions Value="-dDEBUG -dDEBUG_DISABLE_CONSOLE_PRINT -dSYSTOOLS_DETAILED_DEBUG_LOG_MESSAGE_FORCED" />
     </Other>
   </CompilerOptions>
 </CONFIG>
